--- a/BlazorPeliculas/Client/Pages/Personas/CrearPersona.razor
+++ b/BlazorPeliculas/Client/Pages/Personas/CrearPersona.razor
@@ -4,9 +4,9 @@
 @inject IMostrarMensajes mostrarMensajes
 <h3>Crear Persona</h3>
 
-<FormularioPersonas OnValidSubmit="Crear" Persona="persona"></FormularioPersonas>
+<FormularioPersonas OnValidSubmit="Crear" Actor="persona"></FormularioPersonas>
 
-@code { private Personas persona = new Personas();
+@code { private Actores persona = new Actores();
 
 
 
