--- a/BlazorPeliculas/Client/Pages/Generos/CrearGenero.razor
+++ b/BlazorPeliculas/Client/Pages/Generos/CrearGenero.razor
@@ -6,7 +6,8 @@
 <h3>CrearGenero</h3>
 <FormularioGenero Genero="Genero" OnValidSubmit="Crear"></FormularioGenero>
 
-@code { private Generos Genero = new Generos();
+@code {
+    private Generos Genero = new Generos();
 
             private async Task Crear()
             {
@@ -26,4 +27,5 @@
                     navigation.NavigateTo("/generos");
                 }
 
-            } }
+            } 
+    }
