--- a/BlazorPeliculas/Client/Pages/Personas/EditarPersona.razor
+++ b/BlazorPeliculas/Client/Pages/Personas/EditarPersona.razor
@@ -1,26 +1,60 @@
 ﻿@page  "/personas/editar/{PersonaId:int}"
+@inject IRepositorio repositorio
+@inject IMostrarMensajes mostrarMensaje
+@inject NavigationManager navigationManager
 
 <h3>Editar Persona</h3>
 
 
-<FormularioPersonas OnValidSubmit="Editar" Persona="Persona"></FormularioPersonas>
+<FormularioPersonas OnValidSubmit="Editar" Actor="Persona"></FormularioPersonas>
 
 
 
 @code { [Parameter] public int PersonaId { get; set; }
-            Personas Persona = new Personas();
+    Actores Persona = new Actores();
 
-            protected override void OnInitialized()
+    protected async override Task OnInitializedAsync()
+    {
+        //Persona = new Actores()
+        //{
+        //    Id = PersonaId,
+        //    Nombre = "Felipe",
+        //    FechaNacimiento = DateTime.Today
+        //};
+
+        var httpResponse = await repositorio.Get<Actores>($"api/personas/{PersonaId}");
+
+        if (httpResponse.Error)
+        {
+            if (httpResponse.HttpResponseMessage.StatusCode == System.Net.HttpStatusCode.NotFound)
             {
-                Persona = new Personas()
-                {
-                    Id = PersonaId,
-                    Nombre = "Felipe",
-                    FechaNacimiento = DateTime.Today
-                };
+                navigationManager.NavigateTo("personas");
             }
-
-            private void Editar()
+            else
             {
-                Console.WriteLine("Editando a la persona");
-            } }
+                await mostrarMensaje.MostrarMensajeError(await httpResponse.GetBody());
+            }
+        }
+        else
+        {
+            Console.WriteLine("else");
+            Persona = httpResponse.Response;
+            Console.WriteLine(Persona.Foto);
+        }
+
+    }
+
+    private async Task Editar()
+    {
+        var httpResponse = await repositorio.Put("api/personas", Persona);
+        if (httpResponse.Error)
+        {
+            await mostrarMensaje.MostrarMensajeError(await httpResponse.GetBody());
+        }
+        else
+        {
+            navigationManager.NavigateTo("personas");
+        }
+    }
+
+    }
