--- a/BlazorPeliculas/Client/_Imports.razor
+++ b/BlazorPeliculas/Client/_Imports.razor
@@ -11,5 +11,6 @@
 @using BlazorPeliculas.Client.Helpers@*//lo vuel egeneral para toda la aplicacion*@
 @using BlazorPeliculas.Shared.Entidades
 @using BlazorPeliculas.Client.Repositorios
+@using BlazorPeliculas.Client.Helpers
 @using Microsoft.AspNetCore.Components.WebAssembly.Services
 @using BlazorPeliculas.Shared.DTOs
